re PR c++/52988 (std::async not executed on function returning nullptr_t)

PR c++/52988
	* typeck.c (decay_conversion): Don't discard side-effects from
	expressions of nullptr_t.

From-SVN: r188954